<resources>
    <string name="app_name">MoneyBox</string>

    <!-- Lottie files -->
    <string name="lottie_owl_coin_shower">owl_coin_shower.json</string>
 
    <!-- Splash Fragment -->
    <string name="image_transition">ImageTransition</string>
    <string name="logo_transition">LogoTransition</string>

    <!-- Login Fragment -->
    <string name="login_title">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_full_name">Full Name (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="email_address_error">Please enter a correct email address</string>
    <string name="password_error">Please enter a correct password</string>
    <string name="full_name_error">Please enter your full name</string>
    <string name="input_valid">Input is valid!</string>

    <!-- Product Fragment -->
    <string name="product_title">Products</string>
    <string name="no_data">There is not any product</string>
    <string name="err">Connection problem occurred. Please try again later.</string>
    <string name="accessibility_information_nodata">Product listing no data image</string>
    <string name="accessibility_information_err">Product listing network error image</string>
    <string name="accessibility_row_image">Product Image</string>

    <string name="welcome">Welcome Back!! %1$s, Do not waste your time and money. Moneybox offers always the best !!  </string>
    <string name="welcome_alt">Welcome, Do not waste your time and money. Moneybox offers always the best !!  </string>
    <string name="total_plan_value">Total Plan Value: £%1$s</string>
    <string name="plan_value">Plan Value: £%1$s</string>
    <string name="moneybox">Money Box: £%1$s</string>

    <!-- Product Detail Fragment -->
    <string name="product_detail_title">Product Details</string>
    <string name="action_add_money">Add £%1$s</string>
    <string name="action_download_document">Download Document</string>


    <!-- Text Input Field Not empty Validation -->
    <string name="validation_text_input_edit_text_not_empty">Please fill required fields.</string>


</resources>