<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="android.text.TextUtils"/>
        <variable
            name="vm"
            type="com.akinci.moneybox.feature.product.viewmodel.ProductViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/accessibility_row_image"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:visibility="gone"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/product_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/product_image"
                android:singleLine="true"
                android:text="@{vm.selectedProduct.product.friendlyName}"/>

            <TextView
                android:id="@+id/plan_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/product_title"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:singleLine="true"
                android:text="@{@string/plan_value(Double.toString(vm.selectedProduct.planValue))}"/>

            <TextView
                android:id="@+id/money_box_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/plan_value"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:singleLine="true"
                android:text="@{@string/moneybox(Double.toString(vm.selectedProduct.moneybox))}"/>

            <Button
                android:id="@+id/btn_add_money"
                style="@style/Widget.Button.Colored.Rounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginTop="50dp"
                android:layout_below="@+id/money_box_value"
                android:layout_centerHorizontal="true"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:onClick="@{() -> vm.makePayment()}"
                android:text="@{@string/action_add_money(String.format(`%.0f`, vm.selectedProduct.Personalisation.QuickAddDeposit.Amount))}"
                tools:text="@string/action_add_money" />

            <Button
                android:id="@+id/btn_download_document"
                style="@style/Widget.Button.Colored.Rounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/btn_add_money"
                android:layout_centerHorizontal="true"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:visibility="@{TextUtils.isEmpty(vm.selectedProduct.Product.Documents.keyFeaturesUrl) ? View.GONE : View.VISIBLE}"
                android:text="@string/action_download_document" />

        </RelativeLayout>
    </ScrollView>
</layout>